# GameTemplate

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stbimage/: CMakeLists.txt
src/: main.c  main.h
src/core/: gameloop.c  gameloop.h  window.c  window.h
src/io/: input.c  input.h  options.c  options.h  shaderLoader.c  shaderLoader.h  textureLoader.c  textureLoader.h
src/renderPipeline/: camera.c  camera.h  render.c  render.h
src/shader/: debug.fs  debug.vs  renderTexture.fs  renderTexture.vs  triangle.fs  triangle.vs
